# simple_mcp_server

./: Cargo.toml  README.md
src/: handler.rs  main.rs  tools.rs
