[package]
name = "simple_mcp_server"
version = "0.1.0"
edition = "2024"

[dependencies]
rust-mcp-sdk = "0.5.0"
tokio = "1.46.1"
serde = "1.0.219"
serde_json = "1.0.141"
async-trait = "0.1.88"
futures = "0.3.31"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
